CMake: Fix BUILD_LTO_LIBS on Windows
Just a command-line fix for the rename command.

The generation of the bitcode files still fails with both Full- and
ThinLTO on Windows with LLVM 6, hitting an assertion about a symbol only
being valid for COFF targets IIRC; I didn't investigate further.

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -402,7 +402,11 @@ macro(dc src_files src_basedir d_flags output_basedir all_at_once outlist_o outl
     if(${all_at_once})
         set(renameCommand "")
         if(BUILD_LTO_LIBS)
-            set(renameCommand find ${output_basedir} -iname '*.bc' -exec mv '{}' '{}${CMAKE_C_OUTPUT_EXTENSION}' "\\\\;")
+            if(WIN32)
+                set(renameCommand find ${output_basedir} -iname '*.bc' -exec mv '{}' '{}${CMAKE_C_OUTPUT_EXTENSION}' "\;")
+            else()
+                set(renameCommand find ${output_basedir} -iname '*.bc' -exec mv '{}' '{}${CMAKE_C_OUTPUT_EXTENSION}' "\\\\;")
+            endif()
         endif()
 
         add_custom_command(
